--- a/templates/visits/index.html
+++ b/templates/visits/index.html
@@ -196,7 +196,7 @@
                             </td>
                             <td>
                                 <div class="btn-group" role="group">
-                                    <a href="{{ url_for('visits.detail', visit_id=visit.id) }}" 
+                                    <a href="{{ url_for('visits.show', visit_id=visit.id) }}" 
                                        class="btn btn-sm btn-outline-primary" title="Ver detalles">
                                         <i class="bi bi-eye"></i>
                                     </a>
