--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -17,6 +17,7 @@
 
                     <!-- Login Form -->
                     <form method="POST" action="{{ url_for('auth.login') }}" data-validate>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         {{ form.hidden_tag() }}
                         
                         <!-- Username Field -->
