--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -17,6 +17,7 @@
 
                     <!-- Registration Form -->
                     <form method="POST" action="{{ url_for('auth.register') }}">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         {{ form.hidden_tag() }}
                         
                         <!-- Username -->
