--- a/templates/expenses/api_config.html
+++ b/templates/expenses/api_config.html
@@ -31,6 +31,7 @@
                         </div>
                         <div class="card-body">
                             <form method="POST">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                                 <div class="form-check form-switch mb-4">
                                     <input class="form-check-input" type="checkbox" id="api_enabled" name="api_enabled" 
                                            {% if api_config.enabled %}checked{% endif %}>
