cambios en mapa

--- a/templates/map.html
+++ b/templates/map.html
@@ -313,12 +313,12 @@
 </div>
 
 <!-- Modal para detalles -->
-<div class="modal fade" id="detailsModal" tabindex="-1">
-    <div class="modal-dialog">
+<div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="false">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalTitle">Detalles del Área</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
             <div class="modal-body" id="modalBody">
                 <!-- Contenido dinámico -->
